fix: bug in user & activity, add get me
