# server/api/routes/auth.route.go
@@ -11,3 +11,8 @@ func AuthRoutes(a *fiber.App) {
 	r.Post("/signup", controller.SignUp)
 	r.Post("/signin", controller.SignIn)
 }
+
+func UserRoutes(a *fiber.App) {
+	r := a.Group("/v1/user")
+	r.Get("/", controller.GetMe)
+}
